// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VMWarePasswordAndCheck /> renders Connecting based on status.phase 1`] = `
Array [
  <input
    class="form-control"
    id="my-id-text"
    type="password"
    value="password"
  />,
  <div
    class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button-section"
  >
    <button
      class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button btn btn-default"
      disabled=""
      id="my-id-check-button"
      type="button"
    >
      Check
    </button>
    <div
      class="kubevirt-create-vm-wizard__import-vmware-connection-status"
    >
      Checking vCenter Credentials...
      <div
        class="spinner spinner-sm"
      />
    </div>
  </div>,
]
`;

exports[`<VMWarePasswordAndCheck /> renders ConnectionVerified based on status.phase 1`] = `
Array [
  <input
    class="form-control"
    id="my-id-text"
    type="password"
    value="password"
  />,
  <div
    class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button-section"
  >
    <button
      class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button btn btn-default"
      disabled=""
      id="my-id-check-button"
      type="button"
    >
      Check
    </button>
    <div
      class="kubevirt-create-vm-wizard__import-vmware-connection-status"
    >
      Connection successful
    </div>
  </div>,
]
`;

exports[`<VMWarePasswordAndCheck /> renders Failed based on status.phase 1`] = `
Array [
  <input
    class="form-control"
    id="my-id-text"
    type="password"
    value="password"
  />,
  <div
    class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button-section"
  >
    <button
      class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button btn btn-default"
      disabled=""
      id="my-id-check-button"
      type="button"
    >
      Check
    </button>
    <div
      class="kubevirt-create-vm-wizard__import-vmware-connection-status"
    >
      <div
        class="alert alert-warning"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-warning-triangle-o"
        />
        Could not connect to vCenter using the provided credentials.
      </div>
    </div>
  </div>,
]
`;

exports[`<VMWarePasswordAndCheck /> renders LoadingVmDetail based on status.phase 1`] = `
Array [
  <input
    class="form-control"
    id="my-id-text"
    type="password"
    value="password"
  />,
  <div
    class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button-section"
  >
    <button
      class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button btn btn-default"
      disabled=""
      id="my-id-check-button"
      type="button"
    >
      Check
    </button>
    <div
      class="kubevirt-create-vm-wizard__import-vmware-connection-status"
    >
      Connection successful. Loading data...
      <div
        class="spinner spinner-sm"
      />
    </div>
  </div>,
]
`;

exports[`<VMWarePasswordAndCheck /> renders LoadingVmDetailFailed based on status.phase 1`] = `
Array [
  <input
    class="form-control"
    id="my-id-text"
    type="password"
    value="password"
  />,
  <div
    class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button-section"
  >
    <button
      class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button btn btn-default"
      disabled=""
      id="my-id-check-button"
      type="button"
    >
      Check
    </button>
    <div
      class="kubevirt-create-vm-wizard__import-vmware-connection-status"
    >
      <div
        class="alert alert-warning"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-warning-triangle-o"
        />
        Connection succeeded but could not read details of the virtual machine from the vCenter instance.
      </div>
    </div>
  </div>,
]
`;

exports[`<VMWarePasswordAndCheck /> renders LoadingVmsList based on status.phase 1`] = `
Array [
  <input
    class="form-control"
    id="my-id-text"
    type="password"
    value="password"
  />,
  <div
    class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button-section"
  >
    <button
      class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button btn btn-default"
      disabled=""
      id="my-id-check-button"
      type="button"
    >
      Check
    </button>
    <div
      class="kubevirt-create-vm-wizard__import-vmware-connection-status"
    >
      Connection successful. Loading data...
      <div
        class="spinner spinner-sm"
      />
    </div>
  </div>,
]
`;

exports[`<VMWarePasswordAndCheck /> renders PROVIDER_STATUS_CONNECTING 1`] = `
Array [
  <input
    class="form-control"
    id="my-id-text"
    type="password"
    value="password"
  />,
  <div
    class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button-section"
  >
    <button
      class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button btn btn-default"
      disabled=""
      id="my-id-check-button"
      type="button"
    >
      Check
    </button>
    <div
      class="kubevirt-create-vm-wizard__import-vmware-connection-status"
    >
      Connection successful
    </div>
  </div>,
]
`;

exports[`<VMWarePasswordAndCheck /> renders PROVIDER_STATUS_CONNECTION_FAILED 1`] = `
Array [
  <input
    class="form-control"
    id="my-id-text"
    type="password"
    value="password"
  />,
  <div
    class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button-section"
  >
    <button
      class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button btn btn-default"
      disabled=""
      id="my-id-check-button"
      type="button"
    >
      Check
    </button>
    <div
      class="kubevirt-create-vm-wizard__import-vmware-connection-status"
    >
      <div
        class="alert alert-warning"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-warning-triangle-o"
        />
        Can not verify vCenter credentials, connection to the V2V VMWare failed.
      </div>
    </div>
  </div>,
]
`;

exports[`<VMWarePasswordAndCheck /> renders PROVIDER_STATUS_SUCCESS 1`] = `
Array [
  <input
    class="form-control"
    id="my-id-text"
    type="password"
    value="password"
  />,
  <div
    class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button-section"
  >
    <button
      class="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button btn btn-default"
      disabled=""
      id="my-id-check-button"
      type="button"
    >
      Check
    </button>
    <div
      class="kubevirt-create-vm-wizard__import-vmware-connection-status"
    >
      Connection successful
    </div>
  </div>,
]
`;

exports[`<VMWarePasswordAndCheck /> renders correctly 1`] = `
<VMWarePasswordAndCheck
  extraProps={Object {}}
  id="my-id"
  onChange={[Function]}
  value={Object {}}
>
  <Text
    disabled={false}
    id="my-id-text"
    onBlur={[Function]}
    onChange={[Function]}
    type="password"
    value=""
  >
    <FormControl
      bsClass="form-control"
      componentClass="input"
      disabled={false}
      id="my-id-text"
      key="my-id-text"
      onBlur={[Function]}
      onChange={[Function]}
      type="password"
      value=""
    >
      <input
        className="form-control"
        disabled={false}
        id="my-id-text"
        onBlur={[Function]}
        onChange={[Function]}
        type="password"
        value=""
      />
    </FormControl>
  </Text>
  <div
    className="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button-section"
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      className="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button"
      disabled={false}
      id="my-id-check-button"
      onClick={[Function]}
    >
      <button
        className="kubevirt-create-vm-wizard__import-vmware-passwordcheck-button btn btn-default"
        disabled={false}
        id="my-id-check-button"
        onClick={[Function]}
        type="button"
      >
        Check
      </button>
    </Button>
    <VMWareProviderStatus
      connValue={null}
      extraProps={Object {}}
    />
  </div>
</VMWarePasswordAndCheck>
`;
